Second file updated

--- a/Koşul İfadeler/kosuluygulama.html
+++ b/Koşul İfadeler/kosuluygulama.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>If & Elsedsfsd </h1>
-    <script src="if-else.js"></script>
+    <h1>Koşul İfadeler uygulamaregergre</h1>
+    <script src="kosuluygulama.js"></script>
 </body>
 </html>
