--- a/Koşul İfadeler/switch.html
+++ b/Koşul İfadeler/switch.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>If & Elsedsfsd </h1>
-    <script src="if-else.js"></script>
+    <h1>Switch Statements</h1>
+    <script src="switch.js"></script>
 </body>
 </html>
