--- a/Koşul İfadeler/kosuluygulama.html
+++ b/Koşul İfadeler/kosuluygulama.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Koşul İfadeler uygulamaregergre</h1>
+    <h1>Koşul İfadeler uygulama </h1>
     <script src="kosuluygulama.js"></script>
 </body>
 </html>
