--- a/Koşul İfadeler/if-else.html
+++ b/Koşul İfadeler/if-else.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>If & Elsedsfsd </h1>
+    <h1>If & Else </h1>
     <script src="if-else.js"></script>
 </body>
 </html>
