--- a/Koşul İfadeler/kosuluygulama.html
+++ b/Koşul İfadeler/kosuluygulama.html
@@ -5,9 +5,30 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        h3 { 
+            background-color: rgb(82, 81, 79);
+            color: white;
+        }
+        li {
+            box-sizing: border-box;
+            border: solid 2px rgb(155, 150, 150);
+            width: 110px;
+            margin: 10px;
+            background-color: rgb(172, 169, 169) ;
+            text-align: center;
+            color:rgb(0, 0, 0);
+        }
+    </style>
 </head>
 <body>
-    <h1>Koşul İfadeler uygulamaregergre</h1>
+    <h1>Koşul İfadeler uygulama</h1>
+    <h3>06/11/2017 tarihinde trafiğe çıkan bir aracın servis bakım süreler aşağıda verişmiştir.Bu bilgilere göre servis uyarısını veriniz. </h3>
+    <ul>
+        <li>1.Bakım : 1 yıl</li>
+        <li>2.Bakım : 2 yıl</li>
+        <li>3.Bakım : 3 yıl</li>
+    </ul>
     <script src="kosuluygulama.js"></script>
 </body>
 </html>
