--- a/Dom Projesi 1/elemansilme.html
+++ b/Dom Projesi 1/elemansilme.html
@@ -71,7 +71,7 @@
 	
 	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
-	<script src="script.js"></script>
+	<script src="script2.js"></script>
 	
 </body>
 
